# crawlect

./: .crawlectignore  .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  crawlect.py  crawlect_description-20250407114834-jbkgxo.md  description-20250503002952-cm8lq7.md  description.md  essai1.md  format.py  llm.py  ollama_request.py  openai_request.py  output.md  output.py  pyproject.toml  requirements.txt  scan.py  setup.sh  teardown.sh  test.md  zdescript.md  zzz.md
crawlect/: __init__.py  __main__.py  cli.py  cli_option_schema.py  crawlect.py  format.py  languages.json  llm.py  llm_api_loader.py  llm_code_analysis.py  ollama_request.py  openai_request.py  output.py  scan.py  test.py
images/: crawlect.avif
llm-docker/: .env.example  docker-compose.yml
