[project]
name = "Crawlect"
version = "1.0.1"
description = "Crawl, Collect & Document Your Codebase in Markdown."
readme = "README.md"
authors = [
  {name = "Yves Guillo", email = "yves@yvesguillo.ch"},
  {name = "Alexandre Jenzer"}
]
license = "MIT"
requires-python = ">=3.10"
dependencies = [
  "gitignore_parser==0.1.12",
  "openai==1.78.1",
  "ollama==0.4.8"
]

[project.scripts]
crawlect = "crawlect.__main__:main"

[tool.setuptools.package-data]
"crawlect" = ["languages.json"]

[tool.setuptools]
packages = ["crawlect"]