[project]
name = "Crawlect"
dynamic = ["version"]
description = "Crawl, collect & document your codebase in Markdown — now with integrated LLM analysis."
readme = "README.md"
authors = [
  {name = "Yves Guillo & Alexandre Jenzer", email = "yves@yvesguillo.ch"}
]
license = "MIT"
requires-python = ">=3.10"

dependencies = [
  "gitignore_parser==0.1.12",
  "openai==1.78.1",
  "ollama==0.4.8"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Documentation"
]

keywords = [
  "code crawler",
  "documentation",
  "markdown",
  "LLM",
  "static analysis"
]

[project.urls]
"Homepage" = "https://github.com/yvesguillo/crawlect"
"Issues" = "https://github.com/yvesguillo/crawlect/issues"

[project.scripts]
crawlect = "crawlect.__main__:main"

[tool.setuptools.package-data]
"crawlect" = ["languages.json"]

[tool.setuptools]
packages = ["crawlect"]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "crawlect.__version__"}